services/helios/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helios
  namespace: microservices
spec:
  selector:
    app: helios
  ports:
    - port: 80
      targetPort: 80
